# ohtu-miniprojekti

./: .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  log.html  output.xml  pyproject.toml  report.html  retro.md  retro2.md  run_robot_tests.sh  testikattavuusraportti.md
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  bibtex.bib
src/backend/: article_func.py  book_func.py  crawl.py  func.py  kaatestb.py  mastersthesis_func.py  masterthesis_func.py
src/backend/db/: db_delete_all.py  db_func.py  dbtest.py  get_from_db.py  salaus.py
src/backend/tests/: acm.robot  add.robot  backend_test.py  home.robot  resource.robot  search.robot  testipohja_test.py
src/frontend/: app.py  kaatestf.py
src/frontend/templates/: acm.html  book.html  delete.html  delete_confirmation.html  deleted.html  edit.html  edit_book.html  edit_mastersthesis.html  index.html  list.html  mastersthesis.html  masterthesis.html  result.html  search.html  signin.html  testi.html
